--- a/templates/form.html
+++ b/templates/form.html
@@ -100,13 +100,13 @@
         
         
         <!-- Text input-->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label class="col-md-4 control-label" for="textinput">Duration</label>  
           <div class="col-md-4">
           <input id="textinput" name="Duration" type="time" placeholder="placeholder" class="form-control input-md" required="">
             
           </div>
-        </div>
+        </div> -->
         
         <!-- Button (Double) -->
         <div class="form-group">
